<resources>
    <string name="Cancel">Cancel</string>
    <string name="ChooseTip">Please select folders path</string>
    <string name="Detail">detail</string>
    <string name="FileSize">size :</string>
    <string name="LItem">item</string>
    <string name="LowBatteryTest_fragment_title">Low Power Test</string>
    <string name="NotFoundBooks">Please select a file at least</string>
    <string name="NotFoundPath">The sd card is not available</string>
    <string name="OK">OK</string>
    <string name="OutSize">Has reached the maximum number</string>
    <string name="SelectAll">SelectAll</string>
    <string name="Selected">selected</string>
    <string name="UpOneLevel">Up</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_content">"OfflineScriptManager 

Version：OfflineScriptManager_M01_M02_R02 

Developer：Tool and script design group 

Copyright: TINNO"</string>
    <string name="about_credits">Credits</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_opensource">Open Source</string>
    <string name="action_about">About App</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear Data</string>
    <string name="action_export">Import Data</string>
    <string name="action_settings">Settings</string>
    <string name="alert_ext_dir_warning_message">Saving to external directory may not work on all phones. Proceed with caution.</string>
    <string name="alert_ext_dir_warning_title">Warning</string>
    <string name="alert_external_storage_warn_cb_text">Do not show again</string>
    <string name="alert_message">Are you sure you want to delete all data saved in the database?</string>
    <string name="alert_message_create_folder">Enter folder name</string>
    <string name="alert_permission_denied_message">The app requires storage permission to save the recorded video and change default save directory.The app is rendered useless without the permission\\n\\nDo you want to grant it now?</string>
    <string name="alert_permission_denied_title">Storage Permission Denied</string>
    <string name="alert_title_create_folder">Create Folder</string>
    <string name="analytics_library_credit">Crash reporting and analytics SDK by %1$s\\n\\nGithub url: %2$s\\n\\nLicense: %3$s</string>
    <string name="apk">APK:</string>
    <string name="app_icon_credit_Niko">App Icons by %1$s\\n\\nwebsite: %2$s</string>
    <string name="app_name">OfflineScriptManager</string>
    <string name="app_name_string">OfflineScriptManager</string>
    <string name="app_shortcut_action">com.orpheusdroid.screenrecorder.RECORD</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arg_name">Name</string>
    <string name="arg_value">Value</string>
    <string name="attention_adjustment_runtimes">ATTENTION: Invalid after restart!</string>
    <string name="audiorec_key">audiorec</string>
    <string name="autocontrol_fragment_title">Dou Test</string>
    <string name="battery_usetime_average">Average Value</string>
    <string name="battery_usetime_lower_limit">Lower Limit</string>
    <string name="battery_usetime_upper_limit">Upper Limit</string>
    <string name="bitrate_key">bitrate</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_select_file">Choolse result file</string>
    <string name="cancel">Cancel</string>
    <string name="changes_have_not_save">Before test, please save the change !!</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chart_title">Battery percentage curve</string>
    <string name="circle_on_off">Cycle Test Switch</string>
    <string name="clear_over">Clear Data Completed</string>
    <string name="cls">Class:</string>
    <string name="crash_file_name_key">crashfilename</string>
    <string name="crash_file_name_prefix_key">crashfilenameprefix</string>
    <string name="crash_listen_fragment_title">Crash Listen</string>
    <string name="crash_listener_filename_default">yyyyMMdd_hhmmss</string>
    <string name="crash_listener_interval_time_key">crashlistenerintervaltime</string>
    <string name="crash_listener_notification_title">Crash listener is running</string>
    <string name="crash_listener_prefix_default">crashListener</string>
    <string name="crash_save_location_key">crashsavelocation</string>
    <string name="data_collect_off">Before the test, please turn on the battery power data collection switch</string>
    <string name="description">Description:</string>
    <string name="dialog_activity_cancel">Cancel</string>
    <string name="dialog_activity_done">Sure</string>
    <string name="dialog_activity_message">Dou test completed, and the results are saved in:</string>
    <string name="dialog_activity_title">Attention</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="edit_dialog_negative">Cancel</string>
    <string name="edit_dialog_positive">Save</string>
    <string name="edit_intent_notification_action_text">Edit</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_testcase">Edit TestCase</string>
    <string name="edit_testpoint">Edit Test Item</string>
    <string name="exit_message">No more data will be collected after exiting. Are you sure you want to exit?</string>
    <string name="export_error_msg">Please note that the export data is empty</string>
    <string name="export_over">Export data completed, directory is：%s</string>
    <string name="exporting_message">Exporting data</string>
    <string name="external_storage_dir_not_writable">The directory is not writable</string>
    <string name="fab_record_hint">Start recording</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fatal_exception_message">ScreenRecorder: Fatal Exception occurred. Log has been sent</string>
    <string name="filename_key">filename</string>
    <string name="fileprefix_key">fileprefix</string>
    <string name="fps_key">fps</string>
    <string name="function_test_fragment_title">Function Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hop_data_null">Percentage hop data is empty</string>
    <string name="hop_data_record_message">At present, there is a power percentage hop recorded in the database</string>
    <string name="hop_percent_range">Hop percentage:</string>
    <string name="hop_time_range">Hop time :</string>
    <string name="ic_access_alarms"></string>
    <string name="ic_access_time"></string>
    <string name="ic_accessibility"></string>
    <string name="ic_account_box"></string>
    <string name="ic_account_circle"></string>
    <string name="ic_adb"></string>
    <string name="ic_add"></string>
    <string name="ic_add_alarm"></string>
    <string name="ic_add_box"></string>
    <string name="ic_add_circle"></string>
    <string name="ic_add_circle_outline"></string>
    <string name="ic_airplane_mode_off"></string>
    <string name="ic_airplane_mode_on"></string>
    <string name="ic_android"></string>
    <string name="ic_apps"></string>
    <string name="ic_archive"></string>
    <string name="ic_arrow_back"></string>
    <string name="ic_arrow_drop_down"></string>
    <string name="ic_arrow_drop_down_circle"></string>
    <string name="ic_arrow_drop_up"></string>
    <string name="ic_arrow_forward"></string>
    <string name="ic_attachment"></string>
    <string name="ic_auto_fix"></string>
    <string name="ic_backspace"></string>
    <string name="ic_backup"></string>
    <string name="ic_beenhere"></string>
    <string name="ic_block"></string>
    <string name="ic_bluetooth"></string>
    <string name="ic_bluetooth_audio"></string>
    <string name="ic_bluetooth_connected"></string>
    <string name="ic_bluetooth_disabled"></string>
    <string name="ic_bluetooth_searching"></string>
    <string name="ic_bold"></string>
    <string name="ic_check_box_outline"></string>
    <string name="ic_check_box_outline_blank"></string>
    <string name="ic_close"></string>
    <string name="ic_save"></string>
    <string name="name">Name:</string>
    <string name="preference_filename_format_title">File name format</string>
    <string name="preference_filename_prefix_title">File name prefix</string>
    <string name="preference_listener_interval_time_title">Listener interval time(ms)</string>
    <string name="preference_save_location_title">Save location</string>
    <string name="prefs_category_listener_option_title">Share caught picture</string>
    <string name="prefs_category_save_options_title">Save options</string>
    <string name="times">Times:</string>
</resources>