<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/background_light" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0dip" android:textColor="@android:color/black" android:id="@id/dialog_title" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_activity_title" />
    <TextView android:textColor="@android:color/black" android:id="@id/dialog_message" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_activity_message" />
    <Button android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/btn_done_dialog" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_activity_done" />
</LinearLayout>