<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/activity_about" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:paddingBottom="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_credits" />
            <android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:elevation="16.0dip" card_view:cardCornerRadius="3.0dip" xmlns:card_view="http://schemas.android.com/apk/res-auto">
                <TextView android:autoLink="web" android:id="@id/icon_credit_tv" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" />
            </android.support.v7.widget.CardView>
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_libraries" />
            <android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:elevation="16.0dip" card_view:cardCornerRadius="3.0dip" xmlns:card_view="http://schemas.android.com/apk/res-auto">
                <TextView android:autoLink="web" android:id="@id/video_editor_lib_credit_tv" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:elevation="16.0dip" card_view:cardCornerRadius="3.0dip" xmlns:card_view="http://schemas.android.com/apk/res-auto">
                <TextView android:autoLink="web" android:id="@id/analytics_lib_credit_tv" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" />
            </android.support.v7.widget.CardView>
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_opensource" />
            <android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:elevation="16.0dip" card_view:cardCornerRadius="3.0dip" xmlns:card_view="http://schemas.android.com/apk/res-auto">
                <TextView android:autoLink="web" android:id="@id/opensource_info_tv" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <TextView android:gravity="center" android:id="@id/versionTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>